--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="row text-center">
       <div class="col-md-3">
         <div class="card h-100 category-card">
-          <img src="Client-First - icons/business-and-trade 1.svg" class="card-img-top" alt="Technology">
+          <img src="business-and-trade 1.svg" class="card-img-top" alt="Technology">
           <div class="card-body">
             <h5 class="card-title">Technology</h5>
             <p class="card-text">Stay updated with the latest in tech.</p>
@@ -69,7 +69,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100 category-card">
-          <img src="Client-First - icons/Icon-1.svg" class="card-img-top" alt="Lifestyle">
+          <img src="Icon-1.svg" class="card-img-top" alt="Lifestyle">
           <div class="card-body">
             <h5 class="card-title">Lifestyle</h5>
             <p class="card-text">Tips for a balanced lifestyle.</p>
@@ -78,7 +78,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100 category-card">
-          <img src="Client-First - icons/icon.svg" class="card-img-top" alt="Business">
+          <img src="icon.svg" class="card-img-top" alt="Business">
           <div class="card-body">
             <h5 class="card-title">Business</h5>
             <p class="card-text">Insights on the business world.</p>
@@ -87,7 +87,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100 category-card">
-          <img src="Client-First - icons/business-and-trade 1.svg" class="card-img-top" alt="Health">
+          <img src="business-and-trade 1.svg" class="card-img-top" alt="Health">
           <div class="card-body">
             <h5 class="card-title">Health</h5>
             <p class="card-text">Your guide to a healthier life.</p>
@@ -103,7 +103,7 @@
     <div class="row text-center">
       <div class="col-md-3">
         <div class="card h-100 author-card">
-          <img src="Client-First - IMAGES\woman-in-white-and-black-striped-shirt-wearing-black-sunglasses-3671083.svg" class="card-img-top" alt="Author 1">
+          <img src="woman-in-white-and-black-striped-shirt-wearing-black-sunglasses-3671083.svg" class="card-img-top" alt="Author 1">
           <div class="card-body">
             <h5 class="card-title">Author One</h5>
             <p class="card-text">Expert in technology and innovation.</p>
@@ -112,7 +112,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100 author-card">
-          <img src="Client-First - IMAGES\woman-in-white-and-black-striped-shirt-wearing-black-sunglasses-3671083 (2).svg" class="card-img-top" alt="Author 2">
+          <img src="woman-in-white-and-black-striped-shirt-wearing-black-sunglasses-3671083 (2).svg" class="card-img-top" alt="Author 2">
           <div class="card-body">
             <h5 class="card-title">Author Two</h5>
             <p class="card-text">Specialist in business strategies.</p>
@@ -121,7 +121,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100 author-card">
-          <img src="Client-First - IMAGES/cheerful-young-ethnic-male-millennial-standing-near-stone-wall-and-smiling-6147118.svg" class="card-img-top" alt="Author 3">
+          <img src="cheerful-young-ethnic-male-millennial-standing-near-stone-wall-and-smiling-6147118.svg" class="card-img-top" alt="Author 3">
           <div class="card-body">
             <h5 class="card-title">Author Three</h5>
             <p class="card-text">Lifestyle and wellness advocate.</p>
@@ -130,7 +130,7 @@
       </div>
       <div class="col-md-3">
         <div class="card h-100 author-card">
-          <img src="Client-First - IMAGES/fashion-woman-cute-shoes-5704849.svg" class="card-img-top" alt="Author 4">
+          <img src="fashion-woman-cute-shoes-5704849.svg" class="card-img-top" alt="Author 4">
           <div class="card-body">
             <h5 class="card-title">Author Four</h5>
             <p class="card-text">Healthcare expert and consultant.</p>
